Added draft setting. Also, adj subheadings.

--- a/tags.html
+++ b/tags.html
@@ -12,7 +12,8 @@
     <h1 class="site-title">Mechanical Flight</h1>
     <p>Greg McClure</p>
 
-    <h1>Tags for Mechanical Flight</h1>        <li><a href="/tag/poetry.html">poetry</a> (3)</li>
+    <h1>Tags for Mechanical Flight</h1>        <li><a href="/tag/living-in-irvine.html">living-in-irvine</a> (1)</li>
+        <li><a href="/tag/poetry.html">poetry</a> (3)</li>
     
     <section class="footer">
 
