--- a/archives.html
+++ b/archives.html
@@ -15,6 +15,8 @@
 <h1>Archives for Mechanical Flight</h1>
 
 <dl>
+    <dt>Sat 07 July 2018</dt>
+    <dd><a href="/living-in-irvine-1.html">Living in&nbsp;Irvine</a></dd>
     <dt>Sat 05 April 2014</dt>
     <dd><a href="/antiode-to-the-heart.html">Antiode to the&nbsp;Heart</a></dd>
     <dt>Sat 01 June 2013</dt>
