--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
             <nav class="top">
           <ul>
-              <li class="nav-item">Categories</li>
-              <li class="nav-item">About</li>
+              <li class="nav-item"><a href="#">Categories</a></li>
+              <li class="nav-item"><a href="/about/">About</a></li>
           </ul>
       </nav>
 
