Implementing fullwidth tables (and fullwidth in general). Also, table mono typeface.

--- a/404.html
+++ b/404.html
@@ -63,9 +63,9 @@
 <p>Greg McClure</p> 
   
       
-<article>
+<article class="listing">
   <header>
-  <h1><a href="/reading-notes/heidegger-language-in-the-poem.html">Heidegger&rsquo;s Language in the Poem</a></h1>
+  <h1><a href="/reading-notes/heidegger-language-in-the-poem.html">Heidegger&rsquo;s Language in the Poem and How Sweet It Is</a></h1>
   <div class="particulars">28 May 2019 &mdash; reading-notes
       
       &mdash; heidegger
@@ -79,7 +79,7 @@
   </section>
 </article>
 
-<article>
+<article class="listing">
   <header>
   <h1><a href="/music-production/reaper-settings.html">Reaper Settings for macOS</a></h1>
   <div class="particulars">26 May 2019 &mdash; music-production
@@ -95,7 +95,7 @@
   </section>
 </article>
 
-<article>
+<article class="listing">
   <header>
   <h1><a href="/poetry/antiode-to-the-heart.html">Antiode to the Heart</a></h1>
   <div class="particulars">05 Apr 2014 &mdash; poetry
@@ -109,7 +109,7 @@
   </section>
 </article>
 
-<article>
+<article class="listing">
   <header>
   <h1><a href="/prose/two-wolf-variations.html">Two-Wolf Variations</a></h1>
   <div class="particulars">01 Jun 2013 &mdash; prose
@@ -123,7 +123,7 @@
   </section>
 </article>
 
-<article>
+<article class="listing">
   <header>
   <h1><a href="/poetry/for-jazz.html">For Jazz</a></h1>
   <div class="particulars">01 Nov 2006 &mdash; poetry
