--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
 <article class="listing">
   <header>
-  <h1><a href="/reading-notes/heidegger-language-in-the-poem.html">Heidegger&rsquo;s Language in the Poem and How Sweet It Is</a></h1>
+  <h1><a href="/reading-notes/heidegger-language-in-the-poem.html">Heidegger&rsquo;s Language in the Poem</a></h1>
   <div class="particulars">28 May 2019 &mdash; reading-notes
       
       &mdash; heidegger
