Adjusting some heading spacing. Correcting responsiveness issue.

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
 <meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"headline":"About","url":"/about/","name":"Mechanical Flight","description":"The headspace of Gregory J. McClure.","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"/about/","name":"Mechanical Flight","headline":"About","description":"The headspace of Gregory J. McClure.","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
