--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:url" content="/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"headline":"Mechanical Flight","url":"/","name":"Mechanical Flight","description":"The headspace of Gregory J. McClure.","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"/","name":"Mechanical Flight","headline":"Mechanical Flight","description":"The headspace of Gregory J. McClure.","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
