--- a/poetry/index.html
+++ b/poetry/index.html
@@ -42,7 +42,7 @@
 <meta property="og:url" content="/poetry/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"headline":"Poetry","url":"/poetry/","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/poetry/","headline":"Poetry","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
