--- a/prose/index.html
+++ b/prose/index.html
@@ -42,7 +42,7 @@
 <meta property="og:url" content="/prose/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"headline":"Prose","url":"/prose/","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/prose/","headline":"Prose","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
