--- a/reading-notes/index.html
+++ b/reading-notes/index.html
@@ -42,7 +42,7 @@
 <meta property="og:url" content="/reading-notes/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"headline":"Reading Notes","url":"/reading-notes/","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/reading-notes/","headline":"Reading Notes","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
