--- a/music-production/index.html
+++ b/music-production/index.html
@@ -42,7 +42,7 @@
 <meta property="og:url" content="/music-production/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"headline":"Producing","url":"/music-production/","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
+{"url":"/music-production/","headline":"Producing","description":"The headspace of Gregory J. McClure.","@type":"WebPage","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
