Vertical spacing adjustment. Reaper post tweak.

--- a/music-production/reaper-settings.html
+++ b/music-production/reaper-settings.html
@@ -125,7 +125,8 @@ nation. Drag that over to the right-hand side, too.</p>
 <h3 id="audio--seeking">Audio :: Seeking</h3>
 
 <ul>
-  <li>Set <strong><em>Seek playback on item move/size/fade adjustment, pre-roll: 1000ms</em></strong>.</li>
+  <li>Set <strong><em>Seek playback on item move/size/fade adjustment, pre-roll:
+1000ms</em></strong>.</li>
 </ul>
 
 <h2 id="shortcuts">Shortcuts</h2>
@@ -152,12 +153,12 @@ nation. Drag that over to the right-hand side, too.</p>
     <tr>
       <td>View: Scroll horiz reversed</td>
       <td>HorizWheel (two-finger drag)</td>
-      <td> </td>
+      <td>The macOS default drag direction.</td>
     </tr>
     <tr>
-      <td>Undo</td>
-      <td>Z</td>
-      <td> </td>
+      <td>Copy (focus-dep, within time sel)</td>
+      <td>C</td>
+      <td>Easy, fast C-CUP shortcuts.</td>
     </tr>
     <tr>
       <td>Cut (focus-dep, within time sel)</td>
@@ -165,13 +166,13 @@ nation. Drag that over to the right-hand side, too.</p>
       <td> </td>
     </tr>
     <tr>
-      <td>Copy (focus-dep, within time sel)</td>
-      <td>C</td>
+      <td>Paste items/tracks</td>
+      <td>V</td>
       <td> </td>
     </tr>
     <tr>
-      <td>Paste items/tracks</td>
-      <td>V</td>
+      <td>Undo</td>
+      <td>Z</td>
       <td> </td>
     </tr>
   </tbody>
