--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 <meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Mechanical Flight" />
 <script type="application/ld+json">
-{"url":"/about/","name":"Mechanical Flight","headline":"About","description":"The headspace of Gregory J. McClure.","@type":"WebSite","@context":"https://schema.org"}</script>
+{"url":"/about/","headline":"About","name":"Mechanical Flight","description":"The headspace of Gregory J. McClure.","@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 
