Addition loop rec setting.

--- a/music-production/reaper-settings.html
+++ b/music-production/reaper-settings.html
@@ -129,6 +129,12 @@ general transport area) and change <strong><em>Docked transport position</em></s
 1000ms</em></strong>.</li>
 </ul>
 
+<h3 id="audio--loop-recording">Audio :: Loop Recording</h3>
+
+<ul>
+  <li>Turn on <strong><em>In loop recording, discard incomplete …</em></strong>.</li>
+</ul>
+
 <h2 id="shortcuts">Shortcuts</h2>
 
 <table class="fullwidth">
