--- a/music-production/reaper-settings.html
+++ b/music-production/reaper-settings.html
@@ -250,7 +250,7 @@ preference:</p>
     <section class="footer">
 
     <p>
-  &copy; 2018, 2019 Greg McClure and MechanicalFlight.com. Unauthorized use
+  &copy; 2018, 2019, 2020 Greg McClure and MechanicalFlight.com. Unauthorized use
       and/or duplication of this material without express and written permission from
       this site's author and/or owner is strictly prohibited. Excerpts and links may
       be used, provided that full and clear credit is given to Greg McClure and
@@ -259,6 +259,7 @@ preference:</p>
     </p>
 
 </section>
+
 
   </body>
 </html>
