--- a/prose/index.html
+++ b/prose/index.html
@@ -77,7 +77,7 @@
     <section class="footer">
 
     <p>
-  &copy; 2018, 2019 Greg McClure and MechanicalFlight.com. Unauthorized use
+  &copy; 2018, 2019, 2020 Greg McClure and MechanicalFlight.com. Unauthorized use
       and/or duplication of this material without express and written permission from
       this site's author and/or owner is strictly prohibited. Excerpts and links may
       be used, provided that full and clear credit is given to Greg McClure and
@@ -86,6 +86,7 @@
     </p>
 
 </section>
+
 
   </body>
 </html>
