--- a/about/index.html
+++ b/about/index.html
@@ -78,7 +78,7 @@ is located <a href="https://www.linkedin.com/in/gmcclure">here</a>.</p>
     <section class="footer">
 
     <p>
-  &copy; 2018, 2019 Greg McClure and MechanicalFlight.com. Unauthorized use
+  &copy; 2018, 2019, 2020 Greg McClure and MechanicalFlight.com. Unauthorized use
       and/or duplication of this material without express and written permission from
       this site's author and/or owner is strictly prohibited. Excerpts and links may
       be used, provided that full and clear credit is given to Greg McClure and
@@ -87,6 +87,7 @@ is located <a href="https://www.linkedin.com/in/gmcclure">here</a>.</p>
     </p>
 
 </section>
+
 
   </body>
 </html>
