--- a/poetry/for-jazz.html
+++ b/poetry/for-jazz.html
@@ -109,7 +109,7 @@ solo break that has changed the way I everything.</p>
     <section class="footer">
 
     <p>
-  &copy; 2018, 2019 Greg McClure and MechanicalFlight.com. Unauthorized use
+  &copy; 2018, 2019, 2020 Greg McClure and MechanicalFlight.com. Unauthorized use
       and/or duplication of this material without express and written permission from
       this site's author and/or owner is strictly prohibited. Excerpts and links may
       be used, provided that full and clear credit is given to Greg McClure and
@@ -118,6 +118,7 @@ solo break that has changed the way I everything.</p>
     </p>
 
 </section>
+
 
   </body>
 </html>
