--- a/prose/two-wolf-variations.html
+++ b/prose/two-wolf-variations.html
@@ -211,7 +211,7 @@ felt full. Whole. He wolfed them down.</p>
     <section class="footer">
 
     <p>
-  &copy; 2018, 2019 Greg McClure and MechanicalFlight.com. Unauthorized use
+  &copy; 2018, 2019, 2020 Greg McClure and MechanicalFlight.com. Unauthorized use
       and/or duplication of this material without express and written permission from
       this site's author and/or owner is strictly prohibited. Excerpts and links may
       be used, provided that full and clear credit is given to Greg McClure and
@@ -220,6 +220,7 @@ felt full. Whole. He wolfed them down.</p>
     </p>
 
 </section>
+
 
   </body>
 </html>
