--- a/music-production/reaper-settings.html
+++ b/music-production/reaper-settings.html
@@ -21,6 +21,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Reaper Settings for macOS</title>
 
