Getting the house in order yet again.

--- a/music-production/reaper-settings.html
+++ b/music-production/reaper-settings.html
@@ -28,6 +28,7 @@
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display+SC" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
+    
 
     <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Mechanical Flight" />
     <!-- Begin Jekyll SEO tag v2.6.1 -->
@@ -219,8 +220,8 @@ general transport area) and change <strong><em>Docked transport position</em></s
 
 <p><label for="mn-rabbit-hole" class="margin-toggle">⊕</label><input type="checkbox" id="mn-rabbit-hole" class="margin-toggle" /><span class="marginnote">Theming is probably a rabbit hole. I think (completely
 unscientifically) a theme’s greatest impact comes from the first 5 to 10
-seconds of viewing, and then a user starts becoming accustomed to whatever’s in
-front of them — if whatever’s in front of them is useful. Reaper is often
+seconds of viewing, and then a user becomes accustomed to whatever’s in front
+of them — if whatever’s in front of them is useful. Reaper is often
 called out for not being pretty, but other DAWs are changing their skin, subtly
 or dramatically, with every major version. Nothing’s ever finished. Theme your
 life away.</span></p>
