--- a/poetry/antiode-to-the-heart.html
+++ b/poetry/antiode-to-the-heart.html
@@ -28,6 +28,9 @@
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display+SC" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
+    
+    <link href="/css/poem.css" rel="stylesheet">
+    
 
     <link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Mechanical Flight" />
     <!-- Begin Jekyll SEO tag v2.6.1 -->
